--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,11 @@
             </div>
         </div>
     </div>
+    
+    <!-- Version Info Footer -->
+    <div class="fixed bottom-2 left-2 text-xs text-gray-400 bg-white/50 backdrop-blur-sm px-2 py-1 rounded">
+        v0.1.6 | expenses
+    </div>
 
     <script>
         // Firebase Configuration
