fix: Update version number in UI footer to v1.1.0

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
     
     <!-- Version Info Footer -->
     <div class="fixed bottom-2 left-2 text-xs text-gray-400 bg-white/50 backdrop-blur-sm px-2 py-1 rounded">
-        v0.2.1 | hybrid 🔥
+        v1.1.0 | sidur allocation ✨
     </div>
 
     <script>
