chore: Bump version to 1.2.0

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
     
     <!-- Version Info Footer -->
     <div class="fixed bottom-2 left-2 text-xs text-gray-400 bg-white/50 backdrop-blur-sm px-2 py-1 rounded">
-        v1.1.0 | main 🚀
+        v1.2.0 | sidur-improvements 🎨
     </div>
 
     <script>
