--- a/public/index.html
+++ b/public/index.html
@@ -3627,12 +3627,12 @@
                                                         });
                                                         
                                                         return `
-                                                            <td class="border p-2 align-top h-32 ${isFriOrSat ? 'bg-purple-50' : 'bg-gray-50'} ${!isCurrentMonth ? 'opacity-50' : ''} ${isToday ? 'ring-2 ring-blue-500' : ''}"
-                                                                style="width: 14.28%; vertical-align: top;">
+                                                            <td class="border p-2 align-top ${isFriOrSat ? 'bg-purple-50' : 'bg-gray-50'} ${!isCurrentMonth ? 'opacity-50' : ''} ${isToday ? 'bg-blue-100 ring-2 ring-blue-500' : ''}"
+                                                                style="width: 14.28%; min-height: 150px; vertical-align: top;">
                                                                 <div class="text-right mb-1">
-                                                                    <span class="text-xs ${!isCurrentMonth ? 'text-gray-400' : 'text-gray-700'} font-semibold">${date.getDate()}</span>
+                                                                    <span class="text-xs ${isToday ? 'bg-blue-500 text-white px-2 py-1 rounded-full font-bold' : !isCurrentMonth ? 'text-gray-400' : 'text-gray-700'} font-semibold">${date.getDate()}</span>
                                                                 </div>
-                                                                <div class="space-y-1 text-xs overflow-auto max-h-24">
+                                                                <div class="space-y-1 text-xs">
                                                                     ${Object.values(projectGroups).map(group => `
                                                                         <div class="bg-yellow-100 border border-yellow-400 rounded px-1 py-1 relative group">
                                                                             <div class="font-semibold text-xs truncate mb-1">${group.projectName}</div>
