feat: Add click navigation to projects in week view
- Click project name in left column to navigate to project view
- Added cursor pointer and hover effect (bg-gray-50 -> bg-gray-200)
- Tooltip shows 'Click to view project' in Hebrew
- Consistent with month view click behavior
- Sets selectedProjectId and switches to projectView

--- a/public/index.html
+++ b/public/index.html
@@ -3533,7 +3533,9 @@
                                             <!-- Project Rows -->
                                             ${projects.map(project => `
                                                 <tr class="hover:bg-gray-50">
-                                                    <td class="border p-2 bg-gray-50 font-semibold text-sm sticky right-0 z-10" title="${project.name}">
+                                                    <td class="border p-2 bg-gray-50 font-semibold text-sm sticky right-0 z-10 cursor-pointer hover:bg-gray-200 transition-colors" 
+                                                        title="לחץ לצפייה בפרויקט: ${project.name}"
+                                                        onclick="state.currentView = 'projectView'; state.selectedProjectId = '${project.id}'; render();">
                                                         <div class="truncate">${project.name}</div>
                                                     </td>
                                                     ${dates.map(date => {
