--- a/public/index.html
+++ b/public/index.html
@@ -3847,7 +3847,7 @@
                                         </tr>
                                     </thead>
                                     <tbody class="divide-y divide-gray-200">
-                                        ${workers.map(worker => {
+                                        ${window.workers.map(worker => {
                                             const rate = state.workerDailyRates[worker.id] || 0;
                                             const totalDays = window.appHandlers?.sidur ? 
                                                 window.appHandlers.sidur.getWorkerTotalDays(worker.id) : 0;
@@ -3885,7 +3885,7 @@
                                         <tr>
                                             <td class="px-6 py-4 text-right" colspan="3">סה"כ הוצאות עובדים:</td>
                                             <td class="px-6 py-4 text-right text-blue-600">
-                                                ₪${workers.reduce((sum, w) => {
+                                                ₪${window.workers.reduce((sum, w) => {
                                                     const rate = state.workerDailyRates[w.id] || 0;
                                                     const days = window.appHandlers?.sidur ? 
                                                         window.appHandlers.sidur.getWorkerTotalDays(w.id) : 0;
