Fix: Expose workers array to window.workers for global access

--- a/public/index.html
+++ b/public/index.html
@@ -273,6 +273,9 @@
             { id: 'd', name: 'סלימאן'},
             { id: 'e', name: 'מישל'}
         ];
+        
+        // Expose workers globally for use in templates
+        window.workers = workers;
 
         // ===== AUTHENTICATION FUNCTIONS =====
         
