--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
     
     <!-- Version Info Footer -->
     <div class="fixed bottom-2 left-2 text-xs text-gray-400 bg-white/50 backdrop-blur-sm px-2 py-1 rounded">
-        v1.3.0 | main 🚀
+        v1.3.2 | settings-fix 🔧
     </div>
 
     <script>
