chore: update footer to show current branch fix/order-pdf-generation

--- a/public/index.html
+++ b/public/index.html
@@ -199,7 +199,7 @@
 
         // Version and branch info
         const APP_VERSION = '1.3.5';
-        const BRANCH_NAME = 'main';
+        const BRANCH_NAME = 'fix/order-pdf-generation';
         
         // Categories
         const categories = window.categories = [
