fix: switch from Rubik to Noto Sans Hebrew font with better CORS support
- Added Google Fonts preconnect and Noto Sans Hebrew CSS in index.html
- Updated pdf-utils.js to use Noto Sans Hebrew instead of Rubik
- Multiple fallback URLs: GitHub, Google Fonts CDN, jsDelivr CDN
- Noto Sans Hebrew has excellent Hebrew coverage and CORS support
- Should resolve 404 font loading errors

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
     <!-- pdf-lib for PDF generation -->
     <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     
+    <!-- Google Fonts - Noto Sans Hebrew for PDF -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100..900&display=swap" rel="stylesheet">
+    
     <!-- Import Modular Components -->
     <script type="module">
         // Import all components
