fix: use Google Fonts CSS API to dynamically fetch Noto Sans Hebrew fonts
- Fetch font URLs dynamically from Google Fonts CSS API
- Extract actual font file URL from CSS response
- Avoids CORS and 404 errors from hardcoded URLs
- Added @import for Google Fonts in HTML head
- Bumped cache version to v=2.1
- This method is more reliable as Google Fonts API handles CORS properly

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,9 @@
     <!-- Google Fonts - Noto Sans Hebrew for PDF -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100..900&display=swap');
+    </style>
     
     <!-- Import Modular Components -->
     <script type="module">
